--- a/style2.css
+++ b/style2.css
@@ -220,11 +220,51 @@ main {
   gap: 88px;
 }
 
-/* .footer .row .col-md-3 {
-  max-width: calc(33.333% - 10px);
-  margin: 5px;
-  box-sizing: border-box;
-} */
+
+.relative {
+  position: relative;
+}
+
+.hero .absolute {
+  position: absolute;
+  /* Adjust top, left, right, or bottom values to position the SVG within its container */
+  top: 130px;
+  left: -75px;
+  clip-path: inset(0 50% 0 0);
+  width:154px;
+}
+.hero .svg2 {
+  position: absolute;
+  top:-80px;
+  left:20px;
+  width:887px;
+  
+}
+.hero .svg3 {
+  position: absolute;
+  top: -40px;
+  left: 1000px;
+  width:97px;
+}
+.hero .svg4 {
+  position: absolute;
+  top: 620px;
+  left: 90px;
+  width:1230px;
+}
+
+.relative  .svg5 {
+  position: absolute;
+  /* left:177px;
+  top:-10px; */
+  /* width:2000px; */
+
+}
+
+.hero .svg6 {
+  display:none;
+}
+
 
 /* responsive */
 @media (max-width: 320px) {
@@ -332,6 +372,13 @@ main {
     font-weight: 400;
     line-height: 24px;
   }
+  .hero .svg3 {
+    position: absolute;
+    top: -50px;
+    left: 30px;
+    width: 97px;
+    /* display: none; */
+}
 }
 
 @media (max-width: 431px) {
@@ -581,7 +628,12 @@ main {
 
   .one {
     max-width: 400px;
-    height: 434px;
+    height: 400px;
+  }
+
+  .img1 {
+    max-width: 400px;
+    height: 400px;
   }
 
   .box {
@@ -636,14 +688,44 @@ main {
   }
   .footer .row {
     min-width: 421px;
+  }
 
+  .svg1 {
+    display: none;
+  }
+  .hero .svg2 {
+    position: absolute;
+    top:-80px;
+    left:-200px;
+    width:887px;
+    display: none;;
+    
+  }
+  .hero .svg3 {
+    position: absolute;
+    top:-50px;
+    left:82px;
+    width:97px; 
+    /* display: none; */
+  }
+  .hero .svg4 {
+    position: absolute;
+    /* top: 620px;
+    left: 90px;
+    width:1230px; */
+    display:none;
+  }
+  .hero .svg6 {
+    position: absolute;
+    display:block;
+    left:370px;
+    top:-50px;
+    width:62px;
+  }
 }
 
-}
-
-@media (max-width: 1440px) {
+/* @media (max-width: 1440px) {
   .hero {
-    /* min-width: 768px; */
     padding-top: 20px;
     padding-bottom: 20px;
     height: auto;
@@ -651,6 +733,14 @@ main {
     flex-direction: column-reverse;
     align-items: center;
     border-radius: 24px;
+  }
+  .hero .svg4 {
+    position: absolute;
+    display:none;
+    left:370px;
+    top:1021px;
+    clip-path: inset(0 50% 0 0);
+    width:1221px;
   }
   .heading {
     min-width: 395px;
@@ -670,11 +760,11 @@ main {
     width: auto;
   }
   .btn1 {
-    width:auto;
+    width: auto;
   }
   .img-header {
-    /* min-width: 677px;
-    max-width: 1000px; */
+    min-width: 677px;
+    max-width: 1000px;
     height: auto;
   }
   .register {
@@ -706,13 +796,13 @@ main {
   .registration {
     min-width: 432px;
     height: 490px;
-    /* padding-top: 30px; */
+    padding-top: 30px;
   }
   .img1 {
     width: 323px;
   }
   #form-control {
-    /* padding-bottom: 30px; */
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
@@ -825,9 +915,6 @@ main {
     margin-left: 1px;
   }
 
- 
-
-
   .col6 {
     width: 200px;
     margin-right: 1px;
@@ -836,15 +923,14 @@ main {
     min-width: 421px;
   }
 
-    .footer .row {
-      min-width: 421px;
-      max-width:1035px;
-      padding-top:40px;
-
-  
+  .footer .row {
+    min-width: 421px;
+    max-width: 1035px;
+    padding-top: 40px;
   }
   .footer .row .col-md-6 {
     height: 342px;
     min-width: 421px;
   }
-}
+
+} */
