--- a/style2.css
+++ b/style2.css
@@ -557,7 +557,7 @@ main {
   #form-control {
     padding-bottom: 50px;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
   }
 
@@ -565,12 +565,12 @@ main {
     padding-left: 5px;
     padding-right: 5px;
     width: 180px;
-    height: 48px;
+    height: 55px;
     flex-shrink: 0;
   }
   #form-control .col-md-12 {
     width: 384px;
-    height: 48px;
+    height: 60px;
     flex-shrink: 0;
   }
   #form-control .col-md-4 {
