--- a/style2.css
+++ b/style2.css
@@ -137,6 +137,7 @@ main {
   padding: 15px;
   border-radius: 24px;
   height: 378px;
+  width:849px;
   align-content: center;
   align-items: center;
   box-shadow: 0px 10px 20px 0px #00233a,
