--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@
   --bs-blue: #00233a;
   --bs-hero: #219ebc;
   --bs-btn: #ffd26c;
-  --bs-btn-hover:rgba(255,210,108,0.8);
+  --bs-btn-hover: rgba(255, 210, 108, 0.8);
 }
 
 body {
@@ -56,12 +56,6 @@ main {
   margin-bottom: 40px;
 }
 
-
-
-/* .hero-content {
-  padding: 50px;
-} */
-
 .img-header {
   flex-shrink: 0;
   height: 524px;
@@ -84,14 +78,6 @@ main {
 }
 .btn1 {
   background-color: var(--bs-btn);
-  /* font-size: x-large; */
-  /* max-width: auto;
-  height: 52px; */
-  /* display: inline-flex;
-  padding: 3px 20px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 12px; */
 }
 
 .subs {
@@ -112,7 +98,7 @@ main {
   align-items: center;
   gap: 57px;
 }
-.cloud ul {
+/* .cloud ul {
   padding-left: 0;
   align-items: center;
 }
@@ -123,15 +109,13 @@ main {
 .cloud img.logo {
   margin-top: 10px;
   margin-bottom: 15px;
-}
+} */
 
 .registration {
   background-color: var(--bs-hero);
-  margin-top: 200px;
-  margin-bottom: 200px;
-  padding: 15px;
+  /* padding: 15px; */
   border-radius: 24px;
-  height: 378px;
+  height: 360px;
   width: 849px;
   align-content: center;
   align-items: center;
@@ -330,7 +314,6 @@ main {
   display: none;
 }
 
-
 /* responsive */
 @media (max-width: 320px) {
   /* .hero {
@@ -412,19 +395,18 @@ main {
     gap: 8.58px;
     min-width: 360px;
   }
-   
-  .registration {
+
+  /* .registration {
     min-width: auto;
     height: 594px;
     padding-top: 50px;
-    margin-left: 107px;;
-  }
+    margin-left: 107px;
+  } */
   .abdu {
     margin-left: 50px;
   }
   .abdu .width {
     margin-left: 50px;
-
   }
   .width {
     display: flex;
@@ -516,7 +498,7 @@ main {
   }
 }
 
-@media (max-width: 425px) and (min-width:320px) {
+@media (max-width: 425px) and (min-width: 320px) {
   /* .hero {
     min-width: 450px;
     max-width: 449px;
@@ -569,11 +551,11 @@ main {
     flex-direction: column-reverse;
   }
 
-  .registration {
+  /* .registration {
     min-width: auto;
     height: 594px;
     padding-top: 50px;
-  }
+  } */
 
   #form-control {
     padding-bottom: 50px;
@@ -707,7 +689,7 @@ main {
   .footer {
     min-width: 437px;
   }
-   .footer .row {
+  .footer .row {
     width: 436px;
   }
 
@@ -836,11 +818,11 @@ main {
     justify-content: center;
   }
 
-  .registration {
+  /* .registration {
     min-width: auto;
     height: 594px;
     padding-top: 50px;
-  }
+  } */
 
   #form-control {
     padding-bottom: 50px;
@@ -1164,11 +1146,11 @@ main {
     justify-content: center;
   }
 
-  .registration {
+  /* .registration {
     min-width: 432px;
     height: 490px;
     padding-top: 30px;
-  }
+  } */
   .img1 {
     width: 323px;
   }
