--- a/style2.css
+++ b/style2.css
@@ -113,10 +113,9 @@ main {
 
 .registration {
   background-color: var(--bs-hero);
-  /* padding: 15px; */
+  padding-top: 50px; 
+  padding-bottom: 50px;
   border-radius: 24px;
-  height: 360px;
-  width: 849px;
   align-content: center;
   align-items: center;
   box-shadow: 0px 10px 20px 0px #00233a,
@@ -146,7 +145,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 500px;
+  max-width: 500px;
   height: 700px;
   border-radius: 48px;
   background: var(--bs-hero);
@@ -183,136 +182,8 @@ main {
   text-align: center;
 }
 
-.footer {
-  border-radius: 24px 24px 0px 0px;
-  max-width: 1920px;
-  height: auto;
-  background-color: white;
-}
-.footer .row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 1857px;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  /* padding: 130px; */
-  gap: 88px;
-}
 
-.relative {
-  position: relative;
-}
 
-.hero .absolute {
-  position: absolute;
-  top: 130px;
-  left: -75px;
-  clip-path: inset(0 50% 0 0);
-  width: 154px;
-}
-.hero .svg2 {
-  position: absolute;
-  top: -80px;
-  left: 20px;
-  width: 887px;
-}
-.hero .svg3 {
-  position: absolute;
-  top: -40px;
-  left: 1000px;
-  width: 97px;
-}
-.hero .svg4 {
-  position: absolute;
-  top: 620px;
-  left: 90px;
-  width: 1230px;
-}
-
-.relative .svg5 {
-  position: absolute;
-  left: 177px;
-  top: -10px;
-  /* width:2000px; */
-  /* aspect-ratio: 1/2; */
-}
-
-.hero .svg6 {
-  display: none;
-}
-
-.left-svg {
-  position: absolute;
-  top: 1500px;
-  left: 200px;
-}
-
-.left-svg1 {
-  position: absolute;
-  top: 1500px;
-  left: 260px;
-}
-
-.left-svg2 {
-  position: absolute;
-  top: 1940px;
-  left: 190px;
-}
-
-.right-svg3 {
-  position: absolute;
-  top: 1560px;
-  right: 191px;
-}
-.right-svg {
-  position: absolute;
-  top: 1490px;
-  right: 162px;
-  clip-path: inset(0 0 0 19%);
-}
-.right-svg1 {
-  position: absolute;
-  top: 1930px;
-  right: 188px;
-  clip-path: inset(0 0 0 20%);
-}
-
-.left1 {
-  position: absolute;
-  top: 2670px;
-  left: 90px;
-}
-.left2 {
-  position: absolute;
-  top: 2695px;
-  left: 120px;
-}
-.left3 {
-  position: absolute;
-  top: 3720px;
-  left: 130px;
-}
-
-.left-res {
-  display: none;
-}
-.left-res1 {
-  display: none;
-}
-
-.right-res {
-  display: none;
-}
-.right-res1 {
-  display: none;
-}
-.left1-res {
-  display: none;
-}
-.left2-res {
-  display: none;
-}
 
 /* responsive */
 @media (max-width: 320px) {
@@ -499,24 +370,12 @@ main {
 }
 
 @media (max-width: 425px) and (min-width: 320px) {
-  /* .hero {
-    min-width: 450px;
-    max-width: 449px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    height: auto;
-    flex-direction: column-reverse;
-    align-items: center;
-    border-radius: 24px;
-  } */
 
   .heading2 {
     min-width: 375px;
     font-size: 42px;
   }
-  /* .hero-content {
-    padding: 20px;
-  } */
+
   .img-header {
     height: 223px;
   }
@@ -620,8 +479,8 @@ main {
   }
   .speakers {
     display: flex;
-    width: 400px;
-    height: auto;
+    /* width: 400px;
+    height: auto; */
     padding: 36px 0px 63px 0px;
     flex-direction: column;
     justify-content: center;
@@ -629,15 +488,10 @@ main {
     align-items: center;
   }
 
-  .one {
-    max-width: 400px;
-    height: 400px;
-  }
+ 
 
-  .img1 {
-    max-width: 400px;
-    height: 400px;
-  }
+
+
 
   .box {
     display: flex;
@@ -645,7 +499,7 @@ main {
     justify-content: center;
     align-items: center;
     gap: 8.58px;
-    width: 400px;
+    /* width: 400px; */
   }
 
   .width {
@@ -686,91 +540,13 @@ main {
     margin-right: 1px;
   }
 
-  .footer {
-    min-width: 437px;
-  }
-  .footer .row {
-    width: 436px;
-  }
 
-  .hero .svg3 {
-    display: none;
-  }
-  .hero .svg2 {
-    display: none;
-  }
-  .hero .svg4 {
-    display: none;
-  }
 
-  .relative .svg5 {
-    display: none;
-  }
-  .left-svg {
-    display: none;
-  }
 
-  .left-svg1 {
-    display: none;
-  }
-
-  .left-svg2 {
-    display: none;
-  }
-
-  .right-svg3 {
-    display: none;
-  }
-  .right-svg {
-    display: none;
-  }
-  .right-svg1 {
-    display: none;
-    clip-path: inset(0 0 0 20%);
-  }
-
-  .left1 {
-    display: none;
-  }
-  .left2 {
-    display: none;
-  }
-  .left3 {
-    display: none;
-  }
-  .left-res {
-    display: none;
-  }
-  .left-res1 {
-    display: none;
-  }
-
-  .right-res {
-    display: none;
-  }
-  .right-res1 {
-    display: none;
-  }
-  .left1-res {
-    display: none;
-  }
-  .left2-res {
-    display: none;
-  }
 }
 
-@media (max-width: 769px) and (min-width: 431px) {
-  /* .hero {
-    min-width: 431px;
-    max-width: 784px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    height: auto;
-    justify-content: center;
-    flex-direction: column-reverse;
-    align-items: center;
-    border-radius: 24px;
-  } */
+@media (max-width: 992px) and (min-width: 431px) {
+
   .heading {
     min-width: 395px;
     text-align: center;
@@ -781,13 +557,7 @@ main {
     text-align: center;
     font-size: 60px;
   }
-  /* .hero-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-  } */
+
   .img-header {
     width: 100%;
     height: auto;
@@ -817,12 +587,12 @@ main {
     min-width: 395px;
     justify-content: center;
   }
-
-  /* .registration {
-    min-width: auto;
-    height: 594px;
-    padding-top: 50px;
-  } */
+.registration {
+    width: 500px;
+   
+  /*  height: 594px;
+    padding-top: 50px;*/
+  } 
 
   #form-control {
     padding-bottom: 50px;
@@ -867,7 +637,7 @@ main {
     align-items: center;
   }
 
-  .speakers-responsive {
+  /* .speakers-responsive {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -884,11 +654,11 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 24px;
-  }
+  } */
   .speakers {
     display: flex;
-    width: 400px;
-    height: auto;
+    /* width: 400px;
+    height: auto; */
     padding: 36px 0px 63px 0px;
     flex-direction: column;
     justify-content: center;
@@ -896,15 +666,8 @@ main {
     align-items: center;
   }
 
-  .one {
-    max-width: 400px;
-    height: 400px;
-  }
+ 
 
-  .img1 {
-    max-width: 400px;
-    height: 400px;
-  }
 
   .box {
     display: flex;
@@ -912,7 +675,7 @@ main {
     justify-content: center;
     align-items: center;
     gap: 8.58px;
-    width: 400px;
+    /* width: 400px; */
   }
 
   .width {
@@ -953,112 +716,9 @@ main {
     margin-right: 1px;
   }
 
-  .footer {
-    min-width: 421px;
-  }
-  /* .footer .row {
-    width: 421px;
-  } */
 
-  .svg1 {
-    display: none;
-  }
-  .hero .svg2 {
-    display: none;
-  }
-  .hero .svg3 {
-    position: absolute;
-    top: -50px;
-    left: 82px;
-    width: 97px;
-  }
-  .hero .svg4 {
-    display: none;
-  }
-  .hero .svg6 {
-    position: absolute;
-    display: block;
-    left: 370px;
-    top: -50px;
-    width: 62px;
-  }
-  .relative .svg5 {
-    display: none;
-  }
-  .left-svg {
-    display: none;
-  }
 
-  .left-svg1 {
-    display: none;
-  }
-
-  .left-svg2 {
-    display: none;
-  }
-
-  .right-svg3 {
-    display: none;
-  }
-  .right-svg {
-    display: none;
-  }
-  .right-svg1 {
-    display: none;
-    clip-path: inset(0 0 0 20%);
-  }
-
-  .left1 {
-    display: none;
-  }
-  .left2 {
-    display: none;
-  }
-  .left3 {
-    display: none;
-  }
-
-  .left-res {
-    display: block;
-    position: absolute;
-    top: 3200px;
-    left: 30px;
-  }
-  .left-res1 {
-    display: block;
-    position: absolute;
-    top: 3309px;
-    left: 30px;
-  }
-
-  .right-res {
-    display: block;
-    position: absolute;
-    top: 2507px;
-    right: 52px;
-    clip-path: inset(0 0 0 50%);
-  }
-  .right-res1 {
-    display: block;
-    position: absolute;
-    top: 2941px;
-    right: 63px;
-    clip-path: inset(0 0 0 55%);
-  }
-  .left1-res {
-    display: block;
-    position: absolute;
-    top: 4456px;
-    left: 47px;
-    clip-path: inset(0 34% 0 0);
-  }
-  .left2-res {
-    display: block;
-    position: absolute;
-    top: 4437px;
-    left: 37px;
-    clip-path: inset(0 34% 0 0);
-  }
+ 
 
   .hi {
     margin-left: 38px;
@@ -1066,30 +726,6 @@ main {
 }
 
 @media (max-width: 1440px) and (min-width: 1024px) {
-  main {
-    /* max-width: calc(1440px - 300px);
-    display: flex;
-    justify-content: center; */
-  }
-  /* .hero {
-    background-color: var(--bs-hero);
-    max-width: 1330px;
-    height: 563px;
-    border-radius: 48px;
-    padding: 30px;
-    -webkit-border-radius: 48px;
-    -moz-border-radius: 48px;
-    -ms-border-radius: 48px;
-    -o-border-radius: 48px;
-  } */
-  .hero .svg4 {
-    position: absolute;
-    display: none;
-    left: 370px;
-    top: 1021px;
-    clip-path: inset(0 50% 0 0);
-    width: 1221px;
-  }
   .heading {
     min-width: 395px;
     text-align: center;
@@ -1100,21 +736,7 @@ main {
     text-align: center;
     font-size: 60px;
   }
-  /* .hero-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    width: auto;
-  } */
-  /* .hero-content h1 {
-    width: max-content;
-  }
-  .hero-content p {
-    font-size: 17px;
-    padding: 0px;
-  } */
+
   .btn1 {
     width: auto;
   }
@@ -1124,12 +746,7 @@ main {
   .register {
     display: flex;
   }
-  /* .hero-content {
-    padding: 10px;
-  } */
-  /* .icons {
-    padding-bottom: 10px;
-  } */
+
 
   .cloud ul {
     display: flex;
@@ -1146,16 +763,18 @@ main {
     justify-content: center;
   }
 
-  /* .registration {
-    min-width: 432px;
-    height: 490px;
-    padding-top: 30px;
-  } */
+  .registration {
+   /*  min-width: 432px;
+    height: 490px; */
+    /* padding-top: 30px; */
+  padding:50px;  } 
+
   .img1 {
     width: 323px;
   }
+
   #form-control {
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1164,27 +783,27 @@ main {
   #form-control .col-md-6 {
     padding-left: 5px;
     padding-right: 5px;
-    width: 180px;
-    height: 48px;
+    /* width: 180px;
+    height: 55px; */
     flex-shrink: 0;
   }
   #form-control .col-md-12 {
     width: 384px;
-    height: 48px;
+    height: 60px;
     flex-shrink: 0;
   }
   #form-control .col-md-4 {
     padding-left: 5px;
     padding-right: 5px;
-    width: 99px;
-    height: 48px;
+    /* width: 99px;
+    height: 48px; */
     flex-shrink: 0;
   }
   #form-control .col-md-8 {
     padding-left: 5px;
     padding-right: 5px;
-    width: 260px;
-    height: 48px;
+    /* width: 260px;
+    height: 48px; */
     flex-shrink: 0;
   }
 
@@ -1272,96 +891,7 @@ main {
     width: 200px;
     margin-right: 1px;
   }
-  .footer {
-    min-width: 421px;
-  }
+ 
+  
 
-  .footer .row {
-    min-width: 421px;
-    max-width: 1436px;
-    padding-top: 40px;
-  }
-  /* .footer .row .col-md-6 {
-    height: 342px;
-    min-width: 421px;
-  } */
-
-  .relative .svg5 {
-    display: none;
-  }
-  .left-svg {
-    position: absolute;
-    top: 1500px;
-    left: 90px;
-  }
-
-  .left-svg1 {
-    position: absolute;
-    top: 1500px;
-    left: 143px;
-  }
-
-  .left-svg2 {
-    position: absolute;
-    top: 1940px;
-    left: 97px;
-  }
-
-  .right-svg3 {
-    position: absolute;
-    top: 1560px;
-    right: 92px;
-  }
-  .right-svg {
-    position: absolute;
-    top: 1490px;
-    right: 71px;
-
-    clip-path: inset(0 0 0 50%);
-  }
-  .right-svg1 {
-    position: absolute;
-    top: 1930px;
-    right: 85px;
-
-    clip-path: inset(0 0 0 50%);
-  }
-
-  .left1 {
-    position: absolute;
-    top: 2670px;
-    left: 43px;
-    clip-path: inset(0 42% 0 0);
-  }
-  .left2 {
-    position: absolute;
-    top: 2695px;
-    left: 66px;
-    clip-path: inset(0 44% 0 0);
-  }
-  .left3 {
-    position: absolute;
-    top: 3694px;
-    left: 72px;
-  }
-
-  .left-res {
-    display: none;
-  }
-  .left-res1 {
-    display: none;
-  }
-
-  .right-res {
-    display: none;
-  }
-  .right-res1 {
-    display: none;
-  }
-  .left1-res {
-    display: none;
-  }
-  .left2-res {
-    display: none;
-  }
 }
